Masters_work/new_towerslope/l3_Rebin-data/txt_Data_files/l3_rebin_RMS_vs_Low_P1staterr_HighR_iteration.txt
Script started on 2025-01-28 19:31:02-06:00 [TERM="xterm-256color" TTY="/dev/pts/2" COLUMNS="73" LINES="41"]
[?2004h]0;plewis@MSI: ~/Masters_Folder/Masters-Works/Masters_work/new_towerslope/codes[01;32mplewis@MSI[00m:[01;34m~/Masters_Folder/Masters-Works/Masters_work/new_towerslope/codes[00m$ root --web=off[C[C[C[C[C[C[C[C[K
[?2004l   ------------------------------------------------------------------
  | Welcome to ROOT 6.34.02                        https://root.cern |
  | (c) 1995-2024, The ROOT Team; conception: R. Brun, F. Rademakers |
  | Built for linuxx8664gcc on Dec 28 2024, 08:39:22                 |
  | From tags/v6-34-02@v6-34-02                                      |
  | With c++ (Ubuntu 13.3.0-6ubuntu2~24.04) 13.3.0                   |
  | Try '.help'/'.?', '.demo', '.license', '.credits', '.quit'/'.q'  |
   ------------------------------------------------------------------

[0mroot [0] .q[D[DH_Mill_Mean_input[0m[38;5;83m[1m()
[0m[1minput_line_9:2:3: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'H_Mill_Mean_input'[0m
 (H_Mill_Mean_input())[0m
[0;1;32m  ^
[0mError in <HandleInterpreterException>: Error evaluating expression (H_Mill_Mean_input())
Execution of your code was aborted.
[0mroot [1] H_Mill_Mean_input[0m[38;5;83m[1m()[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[0m.q[K[D[DH_Mill_Mean_input[0m[38;5;83m[1m()[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[0m.L RMS_vs_Stat_err.C 
[0m[0mroot [2] .L RMS_vs_Stat_err.C [D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[DH_Mill_Mean_input[0m[38;5;83m[1m()[K[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[0m.q[K[D[DH_Mill_Mean_input[0m[38;5;83m[1m()[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[D[0m.q[K[D[DH_Mill_Mean_input[0m[38;5;83m[1m()
[0m****************************************
Minimizer is Minuit2 / Migrad
Chi2                      =    0.0338902
NDf                       =           10
Edm                       =  2.84216e-27
NCalls                    =           31
p0                        =     -1.43492   +/-   3.0642      
p1                        =    0.0671909   +/-   0.0193896   
Info in <TCanvas::SaveAs>: ROOT file l3_rebin_RMS_vs_Low_P1staterr_HighR_iteration.root has been created
Pearson Correlation Coefficient (r) for dataset 1: -0.146487
Population Correlation Coefficient (rho): -0.146487
Spearman Rank Correlation Coefficient (rho): 0.0629371
[0mroot [3] .q
[0m[?2004h]0;plewis@MSI: ~/Masters_Folder/Masters-Works/Masters_work/new_towerslope/codes[01;32mplewis@MSI[00m:[01;34m~/Masters_Folder/Masters-Works/Masters_work/new_towerslope/codes[00m$ exit
[?2004lexit

Script done on 2025-01-28 19:31:23-06:00 [COMMAND_EXIT_CODE="0"]
